Almost got sharePassword working
