# lambda_functions.py
@@ -127,6 +127,9 @@ def single_func(event, context):
 	if matches(event,"POST","/v1/secrets"):
 		return add_secret(event, context)
 
+	if matches(event,"PUT","/v1/secrets/{sid}/users/{username}"):
+		return share_secret(event, context)
+
 	print("Did not match the event")
 	return {"statusCode":404}
 
@@ -380,6 +383,27 @@ def add_secret(event, context):
 		obj.log.exception("Error")
 		return {"statusCode":500}
 	return {"statusCode":404}
+
+def share_secret(event, context):
+	obj = LambdaCommon()
+	obj.authenticate(event)
+	if obj.getResponse() != None:
+		return obj.getResponse()
+
+	try:
+		sid = event["pathParameters"]["sid"]
+		user = event["pathParameters"]["username"]
+		body = get_body(event)
+		ret = obj.server.shareSecret(obj.ctx,sid,user,body)
+		return {"statusCode":200,"body":json.dumps(ret,indent=2)}
+	except server.AccessDeniedException:
+		obj.log.exception("Access Denied")
+		return {"statusCode":403}
+	except:
+		obj.log.exception("Error")
+		return {"statusCode":500}
+	return {"statusCode":404}
+
 
 
 FORMAT = "%(asctime)-15s %(message)s"
