# swagger.yaml
@@ -301,6 +301,32 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/Secret"
+  /secrets/{sid}/users/{username}:
+    put:
+      summary: "Share a secret"
+      description: ""
+      operationId: "shareSecret"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: path
+        name: sid
+        required: true
+        schema:
+          type: "string"
+      - in: body
+        name: userdata
+        required: true
+        schema:
+          $ref: "#/definitions/SecretUserData"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Secret"
+
 
 
 
